# er-model

./: README.md  pyproject.toml
src/er_model/: er-model.py
